--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -57,9 +57,9 @@ import Title from "../shared/Title.astro";
             <div class="relative">
                 <div class="relative z-10">
                     <img 
-                        src="/images/dev-with-c.webp" 
+                        src="/images/nebil-min_1.png" 
                         alt="GojoTech Development Team" 
-                        class="w-full h-auto rounded-2xl shadow-2xl"
+                        class="w-[70%] mx-auto h-[4rem] lg:h-[5rem] xl:h-[6rem] rounded-2xl shadow-2xl object-cover"
                         loading="lazy"
                     />
                 </div>
