--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -14,7 +14,7 @@ import Title from "../shared/Title.astro";
                 <div class="absolute  p-1 -top-4 md:-top-10 right-0 w-20 h-20 bg-gradient-to-br from-primary to-[#f9a825] rounded-full blur-3xl opacity-60"></div>
                 
                 <span class="absolute w-full aspect-[16/5] -skew-x-12 rounded-full bg-gradient-to-tr from-primary to-[#f9a825] opacity-40 blur-2xl left-0 bottom-0"></span>
-                <img src={"/images/dev-with-c-1.webp"} alt="GojoTech team working on e-commerce solutions in Addis Ababa, Ethiopia" 
+                <img src={"/images/ab-min-removebg-preview.png"} alt="GojoTech team working on e-commerce solutions in Addis Ababa, Ethiopia" 
                 width="1240" height="1385"
                 class=" w-auto left-1/2 -translate-x-1/2 absolute bottom-0 max-h-full" />
             </div>
